--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "@tremor/react": "^3.7.7",
     "axios": "^1.5.0",
     "react": "^18.2.0",
